updated styling to make images on preview section smaller to avoid scrolling

--- a/src/components/boards/Board.css
+++ b/src/components/boards/Board.css
@@ -46,3 +46,10 @@ p, h4 {
     cursor: pointer;
     color: black;
 }
+
+img {
+    object-fit: cover;
+    max-height: 100%;
+    height: 200px;
+    width: 250px;
+}
